# solid-syslog

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVLOG.md  README.md  SECURITY.md  SKILL.md  SUPPORT.md  cppcheck_suppressions_tests.txt  lychee.toml  misra_suppressions.txt  mkdocs.yml
Bdd/Targets/: CMakeLists.txt
Bdd/Targets/Common/: BddTargetAppName.c  BddTargetAppName.h  BddTargetCustomSd.c  BddTargetCustomSd.h  BddTargetErrorText.c  BddTargetErrorText.h  BddTargetFatFsMount.c  BddTargetIps.c  (+29 more)
Core/Source/: BlockSequence.c  BlockSequence.h  BlockSequencePrivate.h  BlockSequenceStatic.c  CMakeLists.txt  RecordStore.c  RecordStore.h  SolidSyslog.c  SolidSyslogAtomicCounter.c  SolidSyslogAtomicU32.h  SolidSyslogBlockDevice.c  SolidSyslogBlockStore.c  SolidSyslogBlockStorePrivate.h  SolidSyslogBlockStoreStatic.c  SolidSyslogBuffer.c  SolidSyslogCircularBuffer.c  SolidSyslogCircularBufferPrivate.h  SolidSyslogCircularBufferStatic.c  SolidSyslogConfigLock.c  SolidSyslogCrc16.c  SolidSyslogCrc16Policy.c  SolidSyslogDatagram.c  SolidSyslogEndpointHost.c  SolidSyslogEndpointHostPrivate.h  SolidSyslogError.c  SolidSyslogErrorMessages.h  SolidSyslogFile.c  SolidSyslogFileBlockDevice.c  SolidSyslogFileBlockDevicePrivate.h  SolidSyslogFileBlockDeviceStatic.c  SolidSyslogFileStore.c  SolidSyslogFormatter.c  SolidSyslogFormatter.h  SolidSyslogHeaderField.c  SolidSyslogHeaderFieldPrivate.h  SolidSyslogMacros.h  SolidSyslogMessageFormatter.c  SolidSyslogMessageFormatter.h  SolidSyslogMessages.c  SolidSyslogMetaSd.c  (+53 more)
Example/: CMakeLists.txt
Example/Common/: ExampleCommandLine.c  ExampleCommandLine.h  ExampleEnterpriseId.h  ExampleInteractive.c  ExampleInteractive.h  ExampleIps.c  ExampleIps.h  ExampleLanguage.c  ExampleLanguage.h  ExampleMtlsConfig.c  ExampleMtlsConfig.h  ExampleTcpConfig.c  ExampleTcpConfig.h  ExampleTlsConfig.c  ExampleTlsConfig.h  ExampleTlsSender_OpenSsl_PosixTcp.c  ExampleTlsSender_OpenSsl_WinsockTcp.c  ExampleUdpConfig.c  ExampleUdpConfig.h
Example/FreeRtos/: CMakeLists.txt  README.md
Example/SingleTask/: SolidSyslogExample.c
Example/Threaded/: ExampleTlsSender_OpenSsl.c  main.c
Example/Windows/: ExampleWindowsCommandLine.c  ExampleWindowsCommandLine.h  SolidSyslogWindowsExample.c
Platform/Atomics/: CMakeLists.txt
Platform/FatFs/: CMakeLists.txt
Platform/FreeRtos/: CMakeLists.txt
Platform/LwipRaw/: CMakeLists.txt
Platform/MbedTls/: .clang-tidy  CMakeLists.txt
Platform/OpenSsl/: CMakeLists.txt
Platform/PlusFat/: CMakeLists.txt
Platform/PlusTcp/: CMakeLists.txt
Platform/Posix/: CMakeLists.txt
Platform/Windows/: CMakeLists.txt
Tests/: .clang-tidy  AddressFake.c  AddressFake.h  BlockSequencePoolTest.cpp  BlockSequenceTest.cpp  BufferFake.c  BufferFake.h  BufferFakeTest.cpp  CMakeLists.txt  ClockFakeTest.cpp  DatagramFake.c  DatagramFake.h  DatagramFakeTest.cpp  FileFake.c  FileFake.h  FileFakeTest.cpp  MqFakeTest.cpp  MutexFake.c  MutexFake.h  OpenSslFakeTest.cpp  SenderFake.c  SenderFake.h  SenderFakeTest.cpp  SocketFakeTest.cpp  SolidSyslogAddressTest.cpp  SolidSyslogAtomicCounterContractTest.cpp  SolidSyslogAtomicCounterTest.cpp  SolidSyslogAtomicCounterTestHelper.h  SolidSyslogAtomicU32Test.cpp  SolidSyslogBlockDeviceTest.cpp  SolidSyslogBlockStoreDrainOrderingTest.cpp  SolidSyslogBlockStorePosixTest.cpp  SolidSyslogBlockStoreTest.cpp  SolidSyslogCircularBufferTest.cpp  SolidSyslogConfigLockTest.cpp  SolidSyslogCrc16PolicyTest.cpp  SolidSyslogCrc16Test.cpp  SolidSyslogEndpointHostTest.cpp  SolidSyslogErrorTest.cpp  SolidSyslogFileBlockDeviceTest.cpp  (+74 more)
Tests/Example/: CMakeLists.txt  ExampleAppNameTest.cpp  ExampleCommandLineTest.cpp  ExampleInteractiveTest.cpp  ExampleIpsTest.cpp  ExampleLanguageTest.cpp  ExampleServiceThreadTest.cpp  ExampleSwitchConfigTest.cpp  ExampleWindowsCommandLineTest.cpp  SolidSyslogExampleTest.cpp
Tests/FatFs/: CMakeLists.txt  SolidSyslogFatFsFilePoolTest.cpp  SolidSyslogFatFsFileTest.cpp
Tests/Fixtures/: SmallMessageSizeTunables.h
Tests/FreeRtos/: CMakeLists.txt  CmsdkUartFake.c  CmsdkUartFake.h  CmsdkUartTest.cpp  SolidSyslogFreeRtosAddressTest.cpp  SolidSyslogFreeRtosDatagramTest.cpp  SolidSyslogFreeRtosMutexTest.cpp  SolidSyslogFreeRtosResolverTest.cpp  SolidSyslogFreeRtosStaticResolverTest.cpp  SolidSyslogFreeRtosSysUpTimeTest.cpp  SolidSyslogFreeRtosTcpStreamTest.cpp  SolidSyslogPlusTcpAddressTest.cpp  SolidSyslogPlusTcpDatagramTest.cpp  SolidSyslogPlusTcpResolverTest.cpp  SolidSyslogPlusTcpTcpStreamTest.cpp
Tests/Lwip/: CMakeLists.txt  SolidSyslogLwipRawAddressTest.cpp  SolidSyslogLwipRawDatagramTest.cpp  SolidSyslogLwipRawDnsResolverTest.cpp  SolidSyslogLwipRawMarshalTest.cpp  SolidSyslogLwipRawResolverTest.cpp  SolidSyslogLwipRawTcpStreamTest.cpp
Tests/MbedTls/: CMakeLists.txt  SolidSyslogMbedTlsAesGcmPolicyTest.cpp  SolidSyslogMbedTlsHmacSha256PolicyTest.cpp  SolidSyslogMbedTlsStreamPoolTest.cpp  SolidSyslogMbedTlsStreamTest.cpp
Tests/MbedTlsIntegration/: CMakeLists.txt  MbedTlsResumptionServer.c  MbedTlsResumptionServer.h  MbedTlsTestCert.c  MbedTlsTestCert.h  MbedTlsTestServer.c  MbedTlsTestServer.h  ReconnectingSocketStream.c  ReconnectingSocketStream.h  SocketStream.c  SocketStream.h  SolidSyslogMbedTlsAesGcmPolicyIntegrationTest.cpp  SolidSyslogMbedTlsStreamIntegrationTest.cpp
Tests/OpenSslIntegration/: BioPairStream.c  BioPairStream.h  CMakeLists.txt  SolidSyslogOpenSslAesGcmPolicyIntegrationTest.cpp  SolidSyslogTlsStreamIntegrationTest.cpp  TlsTestCert.c  TlsTestCert.h  TlsTestServer.c  TlsTestServer.h
Tests/PlusFat/: CMakeLists.txt  SolidSyslogPlusFatFilePoolTest.cpp  SolidSyslogPlusFatFileTest.cpp
Tests/Support/: AtomicOpsFake.c  AtomicOpsFake.h  CMakeLists.txt  ClockFake.c  ClockFake.h  ConfigLockFake.c  ConfigLockFake.h  ErrorHandlerFake.c  ErrorHandlerFake.h  MbedTlsFake.c  MbedTlsFake.h  MinSize.h  MqFake.c  MqFake.h  OpenSslFake.c  OpenSslFake.h  SafeStringStandard.c  SocketFake.c  SocketFake.h  TestUtils.h  WinsockFake.c  WinsockFake.h
(+523 files in other folders)
